# auto-pinter

./: README.md  pyproject.toml
auto-pinter/: main.py
