[tool.poetry]
name = "auto-pinter"
version = "0.1.0"
description = ""
authors = ["danpe919 <kuro.dogbear@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
selenium = "^4.1.3"
chromedriver-binary = "^100.0.4896"
chromedriver-binary-auto = "^0.1.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
